Consultando dados Solicitante

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/proposta?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
+
+# Variáveis de ambiente
+proposta.services.analise-financeira.host=${ANALISE_FINANCEIRA_URL:http://localhost:9999}
+proposta.services.analise-financeira.solicitacao=${ANALISE_FINANCEIRA_API_URL:/api/solicitacao}
