--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,17 @@ spring.datasource.password=root
 # Variáveis de ambiente
 proposta.services.analise-financeira.host=${ANALISE_FINANCEIRA_URL:http://localhost:9999}
 proposta.services.analise-financeira.solicitacao=${ANALISE_FINANCEIRA_API_URL:/api/solicitacao}
+
+apiexternas.request=${analise_financeiro_REQUEST:/api/solicitacao}
+
+#Actuator
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
+
+info.app.name=@project.name@
+info.app.version=@project.version@
+info.app.java.source=@java.version@
+info.app.encoding=@project.build.sourceEncoding@
+
+management.health.livenessstate.enabled=true
+management.health.readinessstate.enabled=true 
